<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/lblTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="17dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/lblTitle"
        android:layout_alignStart="@+id/btnSum" />

    <TextView
        android:id="@+id/lblValue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblValue1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/editText3"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignStart="@+id/lblValue2" />

    <EditText
        android:id="@+id/txtValue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />

    <TextView
        android:id="@+id/lblValue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblValue2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/txtValue2"
        android:layout_alignBottom="@+id/txtValue2"
        android:layout_toStartOf="@+id/txtResult" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMinus"
        android:layout_alignTop="@+id/btnMultiple"
        android:layout_toStartOf="@+id/btnMultiple"
        android:layout_marginEnd="19dp" />

    <Button
        android:id="@+id/btnMultiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMultiple"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/btnDivide"
        android:layout_marginEnd="21dp" />

    <Button
        android:id="@+id/btnSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSum"
        android:layout_alignTop="@+id/btnMinus"
        android:layout_toStartOf="@+id/lblTitle" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDivide"
        android:layout_alignTop="@+id/btnMultiple"
        android:layout_toEndOf="@+id/lblTitle" />

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblResult"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/txtResult"
        android:layout_toStartOf="@+id/lblTitle"
        android:layout_marginBottom="54dp" />


    <EditText
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/btnMinus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp" />

</RelativeLayout>
